Pending changes in the mainline
===============================

* Added Windows builder for Python 3.12


Version 4.2 (2024-05-16)
========================

* Fix signature of "orthanc.RestOutput.SendHttpStatus()"
* Added orthanc.RegisterMoveCallback2() that takes 4 callbacks like the 
  original C SDK function.  This allows you to implement a correct handling
  of the C-Move sub-operations count in the GetMoveSize().  The ApplyMove()
  must now handle a single sub-operation at a time.
  The legacy orthanc.RegisterMoveCallback() always considers that there is a single
  sub-operation and we have observed modalities complaining that the number of
  sub-operations was not matching the number of instances sent.


Version 4.1 (2023-08-30)
========================

* New function from the SDK wrapped in Python:
  - orthanc.RegisterStorageCommitmentScpCallback()
* New configuration section "Python" to group settings related to the plugin:
  - "Python.Path" is an alias for global option "PythonScript"
  - "Python.Verbose" is an alias for global option "PythonVerbose"
* New configuration option "Python.DisplayMemoryUsage" to periodically
  display memory allocations that stem from Python plugins

Maintenance
-----------

* Fix memory leaks when a python script calls orthanc.RestApiPost() and sibling
  methods, in IncomingHttpRequestFilter and in the CMove callback.
* New builders for Windows: Supporting 32 / 64bit with Python 3.9 / 3.10 / 3.11


Version 4.0 (2022-02-23)
========================

=> Minimum SDK version: 1.10.0 <=

* New functions from the SDK wrapped in Python:
  - orthanc.RegisterIncomingCStoreInstanceFilter()
  - orthanc.RegisterReceivedInstanceCallback()


Version 3.4 (2021-08-31)
========================

* On Orthanc stopping, wait for all the queued events to have been processed
* Docker-based builder scripts distinguishing Debian buster and bullseye


Version 3.3 (2021-08-12)
========================
