@@ -215,6 +215,11 @@ set_target_properties(OrthancPython PROPERTIES
   SOVERSION ${PLUGIN_VERSION}
   )
 
+configure_file(
+  Sources/Autogenerated/orthanc.pyi
+  ${CMAKE_CURRENT_BINARY_DIR}/orthanc.pyi
+  COPYONLY)
+
 install(
   TARGETS OrthancPython
   RUNTIME DESTINATION lib    # Destination for Windows
