@@ -1,0 +1,95 @@
+##
+## Python plugin for Orthanc
+## Copyright (C) 2020-2023 Osimis S.A., Belgium
+## Copyright (C) 2024-2024 Orthanc Team SRL, Belgium
+## Copyright (C) 2021-2024 Sebastien Jodogne, ICTEAM UCLouvain, Belgium
+##
+## This program is free software: you can redistribute it and/or
+## modify it under the terms of the GNU Affero General Public License
+## as published by the Free Software Foundation, either version 3 of
+## the License, or (at your option) any later version.
+##
+## This program is distributed in the hope that it will be useful, but
+## WITHOUT ANY WARRANTY; without even the implied warranty of
+## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+## Affero General Public License for more details.
+##
+## You should have received a copy of the GNU Affero General Public License
+## along with this program. If not, see <http://www.gnu.org/licenses/>.
+##
+
+import enum
+
+{{#enumerations}}
+
+class {{short_name}}(enum.Enum):
+    """
+    {{documentation}}
+    """
+{{#values}}
+
+    """
+    {{documentation}}
+    """
+    {{key}}: int = {{value}},
+{{/values}}
+{{/enumerations}}
+
+
+{{#global_functions}}
+
+{{#documentation.short_description}}
+# {{documentation.short_description}}
+{{/documentation.short_description}}
+def {{short_name}}({{documentation.args_declaration}}) -> {{documentation.return_type}}:
+    """
+{{#documentation.description}}
+    {{text}}
+{{/documentation.description}}
+{{#documentation.has_args}}
+
+    Args:
+      {{#documentation.args}}
+      {{name}} ({{type}}): {{text}}
+      {{/documentation.args}}
+{{/documentation.has_args}}
+{{#documentation.has_return}}
+
+    Returns:
+      {{documentation.return_type}}: {{documentation.return_text}}
+{{/documentation.has_return}}
+    """
+    ...
+{{/global_functions}}
+
+
+{{#classes}}
+class {{short_name}}:
+    ...
+
+{{#methods}}
+{{#documentation.short_description}}
+    # {{documentation.short_description}}
+{{/documentation.short_description}}
+    def {{short_name}}(self{{#documentation.has_args}}, {{/documentation.has_args}}{{documentation.args_declaration}}) -> {{documentation.return_type}}:
+        """
+{{#documentation.description}}
+        {{text}}
+{{/documentation.description}}
+{{#documentation.has_args}}
+
+        Args:
+          {{#documentation.args}}
+          {{name}} ({{type}}): {{text}}
+          {{/documentation.args}}
+{{/documentation.has_args}}
+{{#documentation.has_return}}
+
+        Returns:
+          {{documentation.return_type}}: {{documentation.return_text}}
+{{/documentation.has_return}}
+        """
+        ...
+
+{{/methods}}
+{{/classes}}
