@@ -1,6 +1,7 @@
 Pending changes in the mainline
 ===============================
 
+* Created Python documentation for the Orthanc interface, check out "orthanc.pyi"
 * Added Windows builder for Python 3.12
 
 
